[tool.poetry]
name = "bitcoinlib"
version = "0.1.6"
description = ""
authors = ["Ilya Davydov <razzor58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "1.3.22"
numpy = "1.19.5"
scrypt = "0.8.17"
pyaes = "1.6.1"
fastecdsa = "2.1.5"
requests = "2.25.1"
psycopg2-binary = "^2.8.6"
alembic = "^1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
